# practical-topology-attestation

./: README.md
cloudstack/: README.md
swtpm/src/swtpm/: cuse_tpm.c
topographia/: .gitignore  README.md  pom.xml  signer-infra-5.graphml
topographia/src/main/resources/: pseudonyms-50.txt  pseudonyms-primes-50.txt  signer-infra-100.graphml  signer-infra-1000.graphml  signer-infra-10000.graphml  signer-infra-1500.graphml  signer-infra-200.graphml  signer-infra-2000.graphml  signer-infra-2500.graphml  signer-infra-300.graphml  signer-infra-3000.graphml  signer-infra-400.graphml  signer-infra-4000.graphml  signer-infra-5.graphml  signer-infra-500.graphml  signer-infra-5000.graphml  signer-infra-6000.graphml  signer-infra-7000.graphml  signer-infra-8000.graphml  signer-infra-9000.graphml
topographia/src/test/resources/: junit-platform.properties
trousers-tss/: .gitignore  cleanup.sh  configure.ac
trousers-tss/src/include/: Makefile.am  obj_daa.h  obj_daaarakey.h  obj_daacred.h  obj_daaissuerkey.h  rpc_tcstp_tcs.h  rpc_tcstp_tsp.h  spi_utils.h  tcslog.h  trousers_types.h  tsplog.h
trousers-tss/src/include/daa/: bi.h  bi_gmp.h  daa_debug.h  daa_parameter.h  daa_structs.h  issuer.h  platform.h  verifier.h
trousers-tss/src/tcs/: Makefile.am  tcs_pbg.c  tcs_utils.c  tcsi_daa.c
trousers-tss/src/tspi/: Makefile.am  obj_daa.c  obj_daaarakey.c  obj_daacred.c  obj_daaissuerkey.c  obj_tpm.c  spi_utils.c  tsp_auth.c  tsp_daa.c  tspi_context.c  tspi_daa.c
trousers-tss/src/tspi/daa/: Makefile.am  bench_daa_join.sh  bench_daa_sign.sh  credential.txt  daa_debug.c  daa_join.csv  daa_parameter.c  daa_sign.csv  daa_structs.c  daa_verify_signature.csv  issuer.txt  sign-data.txt  signature.txt  test_sign.c  topographia_daa_sign.c  topographia_daa_sign.i  topographia_daa_sign_wrap.c
trousers-tss/src/tspi/daa/big_integer/: bi.c  bi_gmp.c
trousers-tss/src/tspi/daa/big_integer/test/: test.c
trousers-tss/src/tspi/daa/daa_anonymityrevocation/: csencryption_result.c
trousers-tss/src/tspi/daa/daa_issuer/: issue_credential.c  issuer_init.c  issuer_setup.c  key_correctness_proof.c  keypair_generator.c  prime_gen.c
trousers-tss/src/tspi/daa/daa_platform/: credential.txt  daa_join.csv  daa_sign.csv  daa_verify_signature.csv  issuer.txt  platform.c  signature.txt  test_join.c  topographia_daa_join.c  topographia_daa_join.i  topographia_daa_join_wrap.c
trousers-tss/src/tspi/daa/daa_verifier/: verifier.c  verifier_transaction.c
trousers-tss/src/tspi/daa/perf-daa-join/: credential_1.txt  credential_10.txt  credential_11.txt  credential_12.txt  credential_13.txt  credential_14.txt  credential_15.txt  credential_16.txt  credential_17.txt  credential_18.txt  credential_19.txt  credential_2.txt  credential_20.txt  credential_21.txt  credential_22.txt  credential_23.txt  credential_24.txt  credential_25.txt  credential_26.txt  credential_27.txt  credential_28.txt  credential_29.txt  credential_3.txt  credential_30.txt  credential_31.txt  credential_32.txt  credential_33.txt  credential_34.txt  credential_35.txt  credential_36.txt  credential_37.txt  credential_38.txt  credential_39.txt  credential_4.txt  credential_40.txt  credential_41.txt  credential_42.txt  credential_43.txt  credential_44.txt  credential_45.txt  (+9 more)
trousers-tss/src/tspi/daa/perf-daa-join/cred_25/: credential_1.txt  credential_10.txt  credential_11.txt  credential_12.txt  credential_13.txt  credential_14.txt  credential_15.txt  credential_16.txt  credential_17.txt  credential_18.txt  credential_19.txt  credential_2.txt  credential_20.txt  credential_21.txt  credential_22.txt  credential_23.txt  credential_24.txt  credential_25.txt  credential_26.txt  credential_27.txt  credential_3.txt  credential_4.txt  credential_5.txt  credential_6.txt  credential_7.txt  credential_8.txt  credential_9.txt  pseudonyms-27.txt  pseudonyms-50.txt
trousers-tss/src/tspi/daa/perf-daa-sign/: credential_12_07_22_22_43_26.txt
trousers-tss/src/tspi/daa/topographia-123/: credential.txt  daa_join.csv  daa_sign.csv  issuer.txt  signature.txt
trousers-tss/src/tspi/daa/utils/: list.c
(+36 files in other folders)
